boreal/tests/assets/invalid_files/parsing/mul_overflow.yar
// [error: multiplication 10000000000001 * 1048576 overflows]
rule a {
    condition:
        15 == 10000000000001MB
}
